<resources>
    <!-- Other -->
    <string name="app_name">Translate</string>
    <string name="tip_main_input">Enter a word or sentence</string>
    <string name="uk_phonetic">UK Phonetic: %1$s</string>
    <string name="us_phonetic">US Phonetic: %1$s</string>
    <string name="tip_main_yiyan">Today is also a day full of hope!</string>
    <string name="menu_problem">Q and A</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="about_msg">%1$s v%2$s build %3$d.</string>
    <string name="error_code">Error Code: %1$s</string>
    <string name="error_msg">Error Message: %1$s</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="update_no_update">No Update</string>
    <string name="copied">Copied</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_tips">The next step will open your browser to visit website.\nPlease select one website.\n\nGitee for chinese.\nGithub for any people.</string>
    <string name="feedback_github_btn">Github</string>
    <string name="feedback_gitee_btn">Gitee</string>
    <string name="menu_log_filter">Filter</string>

    <!-- Languages -->
    <string name="lan_auto">Auto</string>
    <string name="lan_zh">Chinese</string>
    <string name="lan_en">English</string>
    <string name="lan_ja">Japanese</string>
    <string name="lan_ko">Korean</string>
    <string name="lan_fr">French</string>
    <string name="lan_ru">Russian</string>
    <string name="lan_de">German</string>

    <!-- Preference Keys -->
    <string name="preference_key_appid" translatable="false">appid</string>
    <string name="preference_key_appkey" translatable="false">appkey</string>
    <string name="preference_key_log" translatable="false">log</string>
    <string name="preference_key_update" translatable="false">update</string>
    <string name="preference_key_log_format" translatable="false">log_format</string>
    <string name="preference_key_clipboard" translatable="false">clipboard</string>
    <string name="preference_key_yi_yan" translatable="false">yiYan</string>
    <string name="preference_key_double_click_paste" translatable="false">double_click_paste</string>
    <string name="preference_key_translate_history" translatable="false">translate_history</string>

    <!-- Preference Titles -->
    <string name="preference_title_custom_your_appid">Custom Your AppId</string>
    <string name="preference_title_custom_your_appkey">Custom Your AppKey</string>
    <string name="preference_title_open_log_mode">Open Log Mode</string>
    <string name="preference_title_update">Check Update</string>
    <string name="preference_title_log_format">Log Format</string>
    <string name="preference_title_auto_put">Auto Put</string>
    <string name="preference_title_yi_yan">Yi Yan</string>
    <string name="preference_title_double_click_paste">Double Click Paste</string>
    <string name="preference_title_translate_history">Translate History</string>

    <!-- Preferences Catalogs -->
    <string name="preference_catalog_custom_id">Custom ID</string>
    <string name="preference_catalog_general">General</string>
    <string name="preference_catalog_log">Log</string>
    <string name="preference_catalog_update">Update</string>

    <!-- Preference Message and Summary -->
    <string name="preference_message_log">\nUse %time, %tag, %level, %msg, %throws to define your format.</string>
    <string name="preference_summary_update">Check for update when start app.</string>
    <string name="preference_summary_log">Develop options, Effective next time</string>
    <string name="preference_summary_clipboard">Copy your clipboard content to editor when starting program.</string>
    <string name="preference_summary_yi_yan">Show Yi Yan when starting program.</string>
    <string name="preference_summary_double_click_paste">Double click translate button to paste your clipboard content.</string>
    <string name="preference_summary_translate_history">Show Translate History on Main View</string>

    <!-- Card title -->
    <string name="card_title_error">Error</string>
    <string name="card_title_explains">Explains</string>
    <string name="card_title_phonetic">Phonetic</string>
    <string name="card_title_webdict">Webdict</string>
    <string name="card_title_translation">Translation</string>
    <string name="card_title_us_speak">US Phonetic</string>
    <string name="card_title_uk_speak">UK Phonetic</string>

    <!-- Update -->
    <string name="update">Update</string>
    <string name="update_version_name">VersionName: v%1$s => %2$s</string>
    <string name="update_version_code">VersionCode: %1$d => %2$d</string>
    <string name="update_time">UpdateTime: %1$s</string>
    <string name="update_pre_release">IsPreRelease: %1$s</string>
    <string name="update_true">True</string>
    <string name="update_false">False</string>
    <string name="update_change_log">"ChangeLog: "</string>
    <string name="update_website_download">Website</string>

    <!-- Dialog -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_reset">Reset</string>
    <string name="dialog_checking_update">Checking update…</string>
    <string name="menu_log_history">History</string>
    <string name="menu_about">About</string>
    <string name="preference_key_log_error_limit" translatable="false">log_error_limit</string>
    <string name="preference_title_log_error_limit">Line Limit</string>
    <string name="preference_summary_log_error_limit">Error message line limit. (zero is not limit)</string>
    <string name="tip_main_arrow_image" translatable="false">Indicator arrow</string>

</resources>
