<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Custom App Id -->
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/preference_catalog_custom_id">

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="@string/preference_key_appid"
            app:title="@string/preference_title_custom_your_appid"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="@string/preference_key_appkey"
            app:title="@string/preference_title_custom_your_appkey"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <!-- General -->
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/preference_catalog_general">

        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="@string/preference_key_clipboard"
            app:summary="@string/preference_summary_clipboard"
            app:title="@string/preference_title_auto_put" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="@string/preference_key_yi_yan"
            app:summary="@string/preference_summary_yi_yan"
            app:title="@string/preference_title_yi_yan" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            app:defaultValue="true"
            app:key="@string/preference_key_update"
            app:summary="@string/preference_summary_update"
            app:title="@string/preference_title_update" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/preference_catalog_log">

        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="@string/preference_key_log"
            app:summary="@string/preference_summary_log"
            app:title="@string/preference_title_open_log_mode" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:dialogMessage="@string/preference_message_log"
            app:key="@string/preference_key_log_format"
            app:title="@string/preference_title_log_format"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
